// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentPrinter Tests 001: Renders a single empty segment with no lines or segments to follow 1`] = `
<DocumentFragment>
  <span
    class="sc-guDLey wuijx"
    id="segment0"
  >
    <span
      class="sc-hLQSwg gcsUJF"
    />
    <div
      class="sc-beySPh brsoYh"
      id="segment0-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 002: Renders a single empty segment with more segments to follow 1`] = `
<DocumentFragment>
  <span
    class="sc-guDLey wuijx"
    id="segment0"
  >
    <span
      class="sc-hLQSwg gcsUJF"
    />
    <div
      class="sc-beySPh fKJoIe"
      id="segment0-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 003: Renders a SegmentPrinter with a single character of text and it is the last segment and last line 1`] = `
<DocumentFragment>
  <span
    class="sc-guDLey wuijx"
    id="segment0"
  >
    <span
      class="sc-hLQSwg gcsUJF"
    />
    <div
      class="sc-beySPh fKJoIe"
      id="segment0-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 004: Renders a SegmentPrinter with a single character of text but there are more segments to print 1`] = `
<DocumentFragment>
  <span
    class="sc-guDLey wuijx"
    id="segment004"
  >
    <span
      class="sc-hLQSwg gcsUJF"
    />
    <div
      class="sc-beySPh fKJoIe"
      id="segment004-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 005: Renders a SegmentPrinter with a long string of text but there are more segments to print 1`] = `
<DocumentFragment>
  <span
    class="sc-guDLey wuijx"
    id="segment005"
  >
    <span
      class="sc-hLQSwg gcsUJF"
    />
    <div
      class="sc-beySPh fKJoIe"
      id="segment005-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;

exports[`SegmentPrinter Tests 006: Renders a SegmentPrinter with a large string of text instantly with instantPrint set to true 1`] = `
<DocumentFragment>
  <span
    class="sc-guDLey wuijx"
    id="segment0"
  >
    <span
      class="sc-hLQSwg gcsUJF"
    />
    <div
      class="sc-beySPh fKJoIe"
      id="segment0-cursor"
    >
       
    </div>
  </span>
</DocumentFragment>
`;
